@@ -1,3 +1,7 @@
+2007-07-24  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ImageTest.cs: Added.
+
 2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* SliderTest.cs: Switched to implemented TickPlacement.
